# vegfx

./: .gitignore  Arch.drawio  CMakeLists.txt  README.md  main.cpp  vegfx.cpp  vegfx.h  vegfx_application.cpp  vegfx_application.h  vegfx_engine.cpp  vegfx_engine.h  vegfx_game.cpp  vegfx_game.h  vegfx_graphics.cpp  vegfx_graphics.h  vegfx_log.cpp  vegfx_log.h  vegfx_pch.h  vegfx_structs.h  vegfx_utils.cpp  vegfx_utils.h  vegfx_window.cpp  vegfx_window.h
